fdo#74079 - sd html export: fix false width values

Change-Id: I498310525cf912706d64adb773c951b197b6fc72